# schemata

./: .buildinfo  .gitignore  .readthedocs.yaml  conf.py  conftest.py  dodo.py  genindex.html  index.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  readme.html  readme.md  search.html  searchindex.js  sitemap.xml
.doctrees/: environment.pickle  index.doctree  readme.doctree
.doctrees/docs/: about-schema.doctree
.doctrees/src/: arrays.doctree  composites.doctree  literals.doctree  numbers.doctree  objects.doctree  readme.doctree  schema.doctree  strings.doctree  types.doctree  ui.doctree
.doctrees/src/schemata/: readme.doctree
.doctrees/src/schemata/tests/: readme.doctree
.github/workflows/: python-package.yml
_modules/: index.html
_modules/schemata/: types.html
_modules/schemata/tests/: test_types.html
_sources/: index.ipynb
_sources/docs/: about-schema.ipynb
_sources/src/: arrays.ipynb  objects.ipynb  readme.ipynb  schema.md  strings.ipynb  ui.ipynb
docs/: _config.yml  _toc.yml  about-schema.html  about-schema.ipynb  comparison.md  conf.py  config.yml  readme.ipynb  requirements.txt  schemata-types.html  schemata-types.ipynb  toc.yml
docs/examples/: small_program.py
docs/extras/: ipython-extension.html  ipython-extension.ipynb
schemata/: __init__.py  all.py  arrays.py  builders.py  callables.py  checker.py  composites.py  core.py  exceptions.py  files.py  formats.py  forward.py  geo.py  main.py  mediatypes.py  meta.py  mixins.py  mutable.py  numbers.py  objects.py  ops.py  protocols.py  pytypes.py  rdf.py  schema.py  schemata.py  strings.py  table.py  templates.py  test_all.py  times.py  translate.py  types.py  ui.py  util.py  utils.py
schemata/compat/: jb.py  setuptools.py
schemata/data/: __init__.py  applicator.json  content.json  core.json  format-annotation.json  format-assertion.json  ld.json  meta-data.json  unevaluated.json  validation.json
schemata/locale/: schemata.pot
schemata/locale/en/LC_MESSAGES/: schemata.mo  schemata.po
schemata/locale/es/: __init__.py
schemata/locale/es/LC_MESSAGES/: schemata.mo  schemata.po
schemata/locale/es/tests/: test_es.py
schemata/tests/: test_core.py  test_forward.py  test_geo.py  test_protocols.py  test_pytypes.py  test_types.py
src/: arrays.html  arrays.ipynb  composites.html  composites.ipynb  literals.html  literals.ipynb  numbers.html  numbers.ipynb  objects.html  objects.ipynb  readme.html  readme.ipynb  schema.html  schemata.jsonschema  strings.html  strings.ipynb  types.html  types.ipynb  ui.html  ui.ipynb
src/schemata/: __init__.py  _schema.py  abc.py  alias.py  aliases.py  all.py  apis.py  app.py  applicator.py  apps.py  arrays.py  base.py  builders.py  caches.py  callables.py  composite.py  composites.py  exceptions.py  files.py  formats.py  forms.py  ipython.py  json.py  literal.py  loaders.py  mappings.py  mediatypes.py  mixins.py  mutable.py  numbers.py  numeric.py  objects.py  patches.py  protocols.py  rdf.py  readme.html  readme.md  sequences.py  signatures.py  strings.py  (+6 more)
src/schemata/compat/: __init__.py  click.py  ipython.py  ipywidgets.py  pydantic.py  rich.py  typer.py
src/schemata/tests/: Untitled.ipynb  Untitled1.ipynb  conftest.py  readme.html  readme.md  strategies.py  test_api.py  test_composites.ipynb  test_dicts.ipynb  test_hypothesis.py  test_literal.py  test_media.py  test_py.py  test_types.py  test_utils.py
src/schemata/tests/plugins/: anno.py
